--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ license = {text = "MIT"}
 
 [tool.pdm]
 distribution = false
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "pytest-cookies>=0.7.0",
+]
