--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}"},
 ]
 dependencies = []
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
@@ -17,3 +17,9 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "pre-commit>=3.7.0",
+    "ruff>=0.4.3",
+]
