--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,11 @@ name: Test
 
 on:
   push:
-    - main
+    branches:
+      - main
   pull_request:
-    - main
+    branches:
+      - main
 
 jobs:
   test:
